@@ -6,8 +6,10 @@ Here you can see the full list of changes between releases.
 Version 0.0.4
 -------------
 
-Released on 8 July, 2015
+Not released yet.
 
+- Fix: Skip redis tests if redis-server is not running or connection cannot be
+  established to the server.
 - Fix: Circular reference prevents package from running under Python 3.
 
 Version 0.0.3
